apps/sample-nodejs-app-bindings/base/deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres-svc
  namespace: my-apps
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: postgres
  namespace: my-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy: {}
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - image: harbor.mgt.mytanzu.org/tools/postgres:latest
        ports:
          - containerPort: 5432
        name: postgres
        volumeMounts:
        - name: "postgres-data-dir"
          mountPath: "/var/lib/postgresql/data"
      volumes:
      - name: "postgres-data-dir"
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongo-svc
  namespace: my-apps
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongo
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo
  name: mongo
  namespace: my-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  strategy: {}
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - image: harbor.mgt.mytanzu.org/tools/mongo:latest
        name: mongo
        args: ["--dbpath","/data/db"]
        volumeMounts:
        - name: "mongo-data-dir"
          mountPath: "/data/db"
      volumes:
      - name: "mongo-data-dir"
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: my-apps
  labels:
    name: redis
spec:
  ports:
    - port: 6379
      targetPort: redis
      name: redis
  selector:
    name: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: redis
  name: redis
  namespace: my-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis
  template:
    metadata:
      labels:
        name: redis
    spec:
      containers:
      - name: redis
        image: harbor.mgt.mytanzu.org/tools/redis:latest
        imagePullPolicy: Always
        args: ["--requirepass", "$(REDIS_PASS)"]
        ports:
        - containerPort: 6379
          name: redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: my-apps
  labels:
    app: elasticsearch
spec:
  serviceName: elasticsearch
  replicas: 1
  volumeClaimTemplates: []
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: harbor.mgt.mytanzu.org/tools/elasticsearch:7.2.1
        resources:
            limits:
              cpu: 1000m
            requests:
              cpu: 100m
        ports:
        - containerPort: 9200
          name: rest
          protocol: TCP
        - containerPort: 9300
          name: inter-node
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /usr/share/elasticsearch/data
      volumes:
      - name: data
        emptyDir: {}
---
kind: Service
apiVersion: v1
metadata:
  name: elastic-svc
  namespace: my-apps
  labels:
    app: elasticsearch
spec:
  selector:
    app: elasticsearch
  type: ClusterIP
  ports:
    - port: 9200
      name: rest
    - port: 9300
      name: inter-node
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
  name: mysql-svc
  namespace: my-apps
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql
  name: mysql
  namespace: my-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  strategy: {}
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: harbor.mgt.mytanzu.org/tools/mysql:5.7
        args: [--ignore-db-dir=lost+found]
        #lifecycle:
        #  postStart:
        #    exec:
        #      command: ["/bin/sh", "-c", "mysql -u root --password='password123' -e \"GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' IDENTIFIED BY 'password123';\""]
        ports:
          - containerPort: 3306
        name: mysql
        volumeMounts:
        - name: "mysql-data-dir"
          mountPath: "/var/lib/mysql"
        - name: mysql-configmap
          mountPath: /etc/my.cnf
          subPath: my.cnf
      volumes:
      - name: "mysql-data-dir"
        emptyDir: {}
      - name: mysql-configmap
        configMap:
          name: mysql-configmap
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: my-apps
spec:
  serviceName: rabbitmq
  replicas: 1
  volumeClaimTemplates: []
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: rabbitmq-k8s
        image: harbor.mgt.mytanzu.org/tools/rabbitmq:3.8
        volumeMounts:
          - name: config-volume
            mountPath: /etc/rabbitmq
        ports:
          - name: http
            protocol: TCP
            containerPort: 15672
          - name: amqp
            protocol: TCP
            containerPort: 5672
        livenessProbe:
          exec:
            command: ["rabbitmq-diagnostics", "status"]
          initialDelaySeconds: 60
          periodSeconds: 60
          timeoutSeconds: 15
        readinessProbe:
          exec:
            command: ["rabbitmq-diagnostics", "ping"]
          initialDelaySeconds: 20
          periodSeconds: 60
          timeoutSeconds: 10
        imagePullPolicy: Always
      volumes:
        - name: config-volume
          configMap:
            name: rabbitmq-config
            items:
            - key: rabbitmq.conf
              path: rabbitmq.conf
            - key: enabled_plugins
              path: enabled_plugins
---
kind: Service
apiVersion: v1
metadata:
  name: rabbitmq
  namespace: my-apps
spec:
  type: ClusterIP
  ports:
   - name: http
     protocol: TCP
     port: 15672
     targetPort: 15672
   - name: amqp
     protocol: TCP
     port: 5672
     targetPort: 5672
  selector:
    app: rabbitmq
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-nodejs-app-deployment-v1
  namespace: my-apps
spec:
  selector:
    matchLabels:
      app: test-nodejs-app
      version: v1
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: nodejs-data
      labels:
        app: test-nodejs-app
        version: v1
    spec:
      serviceAccountName: my-apps-sa
      containers:
      - name: my-apps
        image: harbor.mgt.mytanzu.org/nodejs/sample-app:v0.3.27
        volumeMounts:
        - mountPath: /appdir
          name: nodejs-data
        - mountPath: /bindings/redis-claim
          name: redis-creds
        - mountPath: /bindings/postgres-claim
          name: postgres-creds
        - mountPath: /bindings/mysql-claim
          name: mysql-creds
        - mountPath: /bindings/mongo-claim
          name: mongo-creds
        - mountPath: /bindings/elastic-claim
          name: elastic-creds
        - mountPath: /bindings/rbmq-claim
          name: rbmq-creds
        ports:
        - containerPort: 8080
      volumes:
      - name: nodejs-data
        emptyDir: {}
      - name: redis-creds
        secret:
          secretName: redis-creds
      - name: postgres-creds
        secret:
          secretName: postgres-creds
      - name: mysql-creds
        secret:
          secretName: mysql-creds
      - name: mongo-creds
        secret:
          secretName: mongo-creds
      - name: elastic-creds
        secret:
          secretName: elastic-creds
      - name: rbmq-creds
        secret:
          secretName: rbmq-creds
---
apiVersion: v1
kind: Service
metadata:
  name: test-nodejs-app
  namespace: my-apps
  labels:
    app: test-nodejs-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: test-nodejs-app
  type: ClusterIP
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: sample-app-nodejs
  namespace: my-apps
spec:
  routes:
  - conditions:
    - prefix: /
    enableWebsockets: true
    services:
    - name: test-nodejs-app
      port: 80
  virtualhost:
    fqdn: sample-app-binding.apps.h2o-4-9583.h2o.vmware.com
